# fediplace

./: .gitignore  Cargo.toml  README.md  demo curl  rustc-ice-2023-11-10T03_33_11-40454.txt  rustc-ice-2023-11-10T03_33_11-40455.txt  rustc-ice-2023-11-10T03_33_21-40487.txt  rustc-ice-2023-11-10T03_33_21-40488.txt  rustc-ice-2023-11-10T03_33_32-40523.txt  rustc-ice-2023-11-10T03_33_32-40524.txt  rustc-ice-2023-11-10T06_32_15-29324.txt  rustc-ice-2023-11-10T06_32_15-29325.txt
db/: db.sqlite  db.sqlite-shm  db.sqlite-wal
migrations/20160720150332_create_tasks_table/: up.sql
src/: canvas.rs  db.rs  lib.rs  main.rs
src/protocol/: public_key.rs
static/: config.toml  index.html
static/content/: _index.md
static/public/: index.html  robots.txt  sitemap.xml
static/templates/: index.html
