[package]
name = "fediplace"
version = "0.0.0"
edition = "2021"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
diesel = { version = "2.0.0", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
tracing = "0.1.40"
reqwest = {version = "0.11.22", features = ["blocking"]}
reqwest-middleware = "0.2.3"
rocket_sync_db_pools = { version = "0.1.0-rc.3", features = ["diesel_sqlite_pool"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_contrib = "0.4.2"
rand = "0.8.5"
parking_lot = "0.12.1"
url = { version = "2.4.0", features = ["serde"] }
chrono = "0.4.31"
serde = "1.0.191"
serde_json = "1.0.107"
